# CMakePrj

./: CMakeLists.txt  CMakePresets.json  CMakePrj.cpp  README.md  main.cpp  mathc.cpp  source.cpp
include/: CMakePrj.h  Header1.h  mathc.h
